link with GSW library instead of files stored under src/equation_of_state/TEOS10.  Files there are a subset of the GSW Fortran library
Change-Id: Ifdf23a372fed5d921c20f9b68302a753faa5698c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,8 +118,8 @@ list( APPEND mom6_src_files
 
 ecbuild_add_library( TARGET   mom6
                      SOURCES  ${mom6_src_files}
-                     LIBS     ${LAPACK_LIBRARIES} ${NETCDF_LIBRARIES} ${FMS_LIBRARIES} ${CVMIX_LIBRARIES} ${GEOKDTREE_LIBRARIES} ${MOM6_DA_HOOKS_LIBRARIES}
-                     INCLUDES ${FMS_INCLUDES} ${CVMIX_INCLUDES} ${GEOKDTREE_INCLUDES} ${MOM6_DA_HOOKS_INCLUDES}
+                     LIBS     ${LAPACK_LIBRARIES} ${NETCDF_LIBRARIES} ${FMS_LIBRARIES} ${CVMIX_LIBRARIES} ${GEOKDTREE_LIBRARIES} ${MOM6_DA_HOOKS_LIBRARIES} ${GSW_LIBRARIES}
+                     INCLUDES ${FMS_INCLUDES} ${CVMIX_INCLUDES} ${GEOKDTREE_INCLUDES} ${MOM6_DA_HOOKS_INCLUDES} ${GSW_INCLUDES}
                      INSTALL_HEADERS LISTED
                      LINKER_LANGUAGE ${OOPS_LINKER_LANGUAGE}
                     )
